--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     window.$docsify = {
       name: '',
       repo: '',
-      loadSidebar: true,
+      loadSidebar: false,
       subMaxLevel: 3,
       coverpage: true,
       onlyCover: false
